--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,43 +1,84 @@
+<!doctype html>
+<html>
+<head>
+<meta charset='UTF-8' />
 <style>
-a:link,a:visited {
-	color: #0398CA;
+input,textarea {
+	border: 1px solid #CCC;
+	margin: 0px;
+	padding: 0px
 }
 
-span#zf-name {
-	color: #91BE3F;
+#body {
+	max-width: 800px;
+	margin: auto
 }
 
-div#welcome {
-	color: #FFFFFF;
-	background-image: url(http://framework.zend.com/images/bkg_header.jpg);
-	width: 600px;
-	height: 400px;
-	border: 2px solid #444444;
-	overflow: hidden;
-	text-align: center;
+#log {
+	width: 100%;
+	height: 400px
 }
 
-div#more-information {
-	background-image:
-		url(http://framework.zend.com/images/bkg_body-bottom.gif);
-	height: 100%;
+#message {
+	width: 100%;
+	line-height: 20px
 }
 </style>
-<div id="welcome">
-	<h1>
-		Welcome to the <span id="zf-name">Zend Framework!</span>
-	</h1>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="/zs/public/js/fancywebsocket.js"></script>
+<script type="text/javascript">
+		var Server;
 
-	<h3>This is your project's main page</h3>
+		function log( text ) {
+			$log = $('#log');
+			//Add text to log
+			$log.append(($log.val()?"\n":'')+text);
+			//Autoscroll
+			$log[0].scrollTop = $log[0].scrollHeight - $log[0].clientHeight;
+		}
 
-	<div id="more-information">
-		<p>
-			<img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" />
-		</p>
-		<p>
-			Helpful Links: <br /> <a href="http://framework.zend.com/">Zend
-				Framework Website</a> | <a
-				href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
-		</p>
+		function send( text ) {
+			Server.send( 'message', text );
+		}
+
+		$(document).ready(function() {
+			log('Connecting...');
+			Server = new FancyWebSocket('ws://192.168.3.253:9000');
+
+			$('#message').keypress(function(e) {
+				if ( e.keyCode == 13 && this.value ) {
+					log( 'You: ' + this.value );
+					send( this.value );
+
+					$(this).val('');
+				}
+			});
+
+			//Let the user know we're connected
+			Server.bind('open', function() {
+				log( "Connected." );
+			});
+
+			//OH NOES! Disconnection occurred.
+			Server.bind('close', function( data ) {
+				log( "Disconnected." );
+			});
+
+			//Log any messages sent from server
+			Server.bind('message', function( payload ) {
+				log( payload );
+			});
+
+			Server.connect();
+		});
+	</script>
+</head>
+
+<body>
+	<div id='body'>
+		<textarea id='log' name='log' readonly='readonly'></textarea>
+		<br /> <input type='text' id='message' name='message' />
 	</div>
-</div>
+</body>
+</html>
