Dispatcher at stable mode(Dispatch Mode :D ). Upgradation are possible for further requirements

--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -49,7 +49,7 @@ input,textarea {
 			$('#message').keypress(function(e) {
 				if ( e.keyCode == 13 && this.value ) {
 					log( 'You: ' + this.value );
-					message = '{"message":"tirth","action":"testing","controller":"index","module":"default"}';
+					message = '{"message":"tirth","action":"index","controller":"index","module":"default"}';
 					send( message );
 					$(this).val('');
 				}
