--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,7 +1,3 @@
-<!doctype html>
-<html>
-<head>
-<meta charset='UTF-8' />
 <style>
 input,textarea {
 	border: 1px solid #CCC;
@@ -24,8 +20,6 @@ input,textarea {
 	line-height: 20px
 }
 </style>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="/zs/public/js/fancywebsocket.js"></script>
 <script type="text/javascript">
 		var Server;
@@ -75,13 +69,9 @@ input,textarea {
 			Server.connect();
 		});
 	</script>
-</head>
-
-<body>
-	<div id='body'>
-		<textarea id='log' name='log' readonly='readonly'></textarea>
-		<br /> <input type='text' id='message' name='message' />
-	</div>
-	<div class="output"></div>
-</body>
-</html>
+<div id='body'>
+	<textarea id='log' name='log' readonly='readonly'></textarea>
+	<br /> <input type='text' id='message' name='message' />
+</div>
+<div class="output"></div>
+<?php echo "<p>".$this->tirth."</p>";?>
