--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
+<?php echo $this->doctype('HTML5');?>
 <html>
 <head>
     <?php echo $this->headTitle();?>
     <?php echo $this->headStyle()->appendStyle($this->placeholder('css'));?>
     <?php
-		if ($this->dojo ()->isEnabled ()) {
-			$this->dojo ()->setDjConfigOption ( 'usePlainJson', true )->addStylesheetModule ( 'dijit.themes.tundra' )->setLocalPath ( $this->baseUrl()."/js/dojo/dojo/dojo.js" );
-			echo $this->dojo ();
-		}
-	?>
+				if ($this->dojo ()->isEnabled ()) {
+					$this->dojo ()->setDjConfigOption ( 'usePlainJson', true )->addStylesheetModule ( 'dijit.themes.tundra' )->setLocalPath ( $this->baseUrl () . "/js/dojo/dojo/dojo.js" );
+					echo $this->dojo ();
+				}
+				?>
 	<?php echo $this->headScript();?>
 </head>
 <body <?php echo $this->dojo ()->isEnabled ()?"class='tundra'":"";?>>
 	<?php
 	echo $this->layout ()->content;
 	?>
-	</body>
+	<script type="text/javascript">
+	</script>
+</body>
 </html>
