--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -52,6 +52,7 @@ input,textarea {border: 1px solid #CCC;margin: 0px;padding: 0px}
 
 		Server.connect();
 	});
+	// Temporary data
 <?php $this->headScript()->captureEnd(); ?>
 </script>
 <div id='body'>
