--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -35,7 +35,7 @@ input,textarea {border: 1px solid #CCC;margin: 0px;padding: 0px}
 
 		//Let the user know we're connected
 		Server.bind('open', function() {
-			log( "Connected." );
+			log( "Connected. welcome to heavan!!!" );
 		});
 
 		//OH NOES! Disconnection occurred.
@@ -57,7 +57,7 @@ input,textarea {border: 1px solid #CCC;margin: 0px;padding: 0px}
 </script>
 <div id='body'>
 	<?php echo $this->form;?>
-	<!-- <textarea id='log' name='log' readonly='readonly'></textarea>  -->
+	<!-- <textarea id='log' name='log' readonly='readonly'></textarea> -->
 	<!-- <br /> <input type='text' id='message' name='message' /> -->
 </div>
 <div class="output"></div>
